--- a/notebooks/Team 4 Gold Medallion Notebook.ipynb
+++ b/notebooks/Team 4 Gold Medallion Notebook.ipynb
@@ -612,7 +612,7 @@
     "\"\"\"\n",
     "#create event_dim\n",
     "(commit_dim\n",
-    " .repartition(???) # do some math for this one...\n",
+    " .repartition(22) # do some math for this one...\n",
     " .write\n",
     " .format(\"parquet\")\n",
     " .option(\"header\", True)\n",
