--- a/notebooks/Team 4 Silver Medallion Notebook.ipynb
+++ b/notebooks/Team 4 Silver Medallion Notebook.ipynb
@@ -60,7 +60,10 @@
     "import sparknlp\n",
     "from pyspark.ml import Pipeline\n",
     "from sparknlp.annotator import *\n",
-    "from sparknlp.common import *"
+    "from sparknlp.common import *\n",
+    "\n",
+    "from sparknlp import Finisher\n",
+    "from sparknlp.pretrained import PretrainedPipeline"
    ]
   },
   {
@@ -118,7 +121,8 @@
     }
    },
    "source": [
-    "#Actor Table"
+    "#Actor Table\n",
+    "- Add is_bot column"
    ]
   },
   {
@@ -143,8 +147,8 @@
     "                \"actor.login\", \n",
     "                \"actor.display_login\")\n",
     "            .dropna(subset=[\"id\"])\n",
-    "            .dropDuplicates([\"id\"])                  #Cleaning: drop duplicates\n",
-    "            .withColumn(\"is_bot\",                          #Transformation: Add column 'is_bot'\n",
+    "            .dropDuplicates([\"id\"])                         \n",
+    "            .withColumn(\"is_bot\",                        \n",
     "                        when(col(\"login\").contains(\"[bot]\"), True)\n",
     "                        .otherwise(False)) \n",
     "            )"
@@ -214,6 +218,110 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "ef64ee06-ceaa-4721-a818-b86b4a1fd46b",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "source": [
+    "#Event Table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "ac5100dd-2393-48b2-81f9-2598617ad229",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "event_df = df.select(\n",
+    "    col(\"id\").cast(\"long\"),\n",
+    "    col(\"type\").alias(\"event_type\"),\n",
+    "    col(\"actor.id\").alias(\"actor_id\"),\n",
+    "    col(\"repo.id\").alias(\"repo_id\"),\n",
+    "    col(\"org.id\").alias(\"org_id\"),\n",
+    "    \"public\",\n",
+    "    \"created_at\"\n",
+    ").dropna(subset=[\"id\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "340af30e-f079-472d-a971-fc9323263c9b",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "schema = StructType([\n",
+    "    StructField('id', LongType(), nullable = False),\n",
+    "    StructField('event_type', StringType(), nullable = False),\n",
+    "    StructField('actor_id', LongType(), nullable = True),\n",
+    "    StructField('repo_id', LongType(), nullable = False),\n",
+    "    StructField('org_id', LongType(), nullable = True),\n",
+    "    StructField('public', BooleanType(), nullable = False),\n",
+    "    StructField('created_at', TimestampType(), nullable = False)\n",
+    "])\n",
+    "event_df = spark.createDataFrame(event_df.rdd, schema = schema)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d51fcb29-0ee2-4d43-bd1d-6c683f0f5786",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#Event Table to Storage\n",
+    "\n",
+    "(event_df\n",
+    " .repartition(13)\n",
+    " .write\n",
+    " .format(\"parquet\")\n",
+    " .option(\"header\", True)\n",
+    " .mode(\"overwrite\")       \n",
+    " .save(silver_path + \"EventTable\")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "add55fc2-0fa7-4f71-b9df-534547e9ceae",
      "showTitle": false,
      "title": ""
@@ -240,7 +348,6 @@
    },
    "outputs": [],
    "source": [
-    "# Clean and add columns we want\n",
     "org_df = (df.select(\"org.id\", \"org.login\", \"org.url\")\n",
     "          .dropna(subset = [\"id\"])\n",
     "          .dropDuplicates([\"id\"]))"
@@ -335,7 +442,6 @@
    },
    "outputs": [],
    "source": [
-    "# Clean and add columns we want\n",
     "repo_df = (df.select(\"repo.id\", \"repo.name\", \"repo.url\")\n",
     "             .dropDuplicates([\"id\"]))"
    ]
@@ -403,111 +509,6 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "ef64ee06-ceaa-4721-a818-b86b4a1fd46b",
-     "showTitle": false,
-     "title": ""
-    }
-   },
-   "source": [
-    "#Event Table"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "ac5100dd-2393-48b2-81f9-2598617ad229",
-     "showTitle": false,
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Clean and add columns we want\n",
-    "event_df = df.select(\n",
-    "    col(\"id\").cast(\"long\"),\n",
-    "    col(\"type\").alias(\"event_type\"),\n",
-    "    col(\"actor.id\").alias(\"actor_id\"),\n",
-    "    col(\"repo.id\").alias(\"repo_id\"),\n",
-    "    col(\"org.id\").alias(\"org_id\"),\n",
-    "    \"public\",\n",
-    "    \"created_at\"\n",
-    ").dropna(subset=[\"id\"])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "340af30e-f079-472d-a971-fc9323263c9b",
-     "showTitle": false,
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "schema = StructType([\n",
-    "    StructField('id', LongType(), nullable = False),\n",
-    "    StructField('event_type', StringType(), nullable = False),\n",
-    "    StructField('actor_id', LongType(), nullable = True),\n",
-    "    StructField('repo_id', LongType(), nullable = False),\n",
-    "    StructField('org_id', LongType(), nullable = True),\n",
-    "    StructField('public', BooleanType(), nullable = False),\n",
-    "    StructField('created_at', TimestampType(), nullable = False)\n",
-    "])\n",
-    "event_df = spark.createDataFrame(event_df.rdd, schema = schema)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "d51fcb29-0ee2-4d43-bd1d-6c683f0f5786",
-     "showTitle": false,
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#Event Table to Storage\n",
-    "\n",
-    "(event_df\n",
-    " .repartition(13)\n",
-    " .write\n",
-    " .format(\"parquet\")\n",
-    " .option(\"header\", True)\n",
-    " .mode(\"overwrite\")       \n",
-    " .save(silver_path + \"EventTable\")\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
      "nuid": "c3b7c8d3-115c-45cf-8ee4-1cdc2d58b25b",
      "showTitle": false,
      "title": ""
@@ -516,7 +517,7 @@
    "source": [
     "#PushEvent Table\n",
     "\n",
-    "- Make sure no nulls/duplicates and correct casting"
+    "- Add is_main column"
    ]
   },
   {
@@ -545,7 +546,7 @@
     "                     col(\"payload.ref\").alias(\"branch_ref\"),\n",
     "                     col(\"payload.commits\")[0].sha.alias(\"commit_id\")\n",
     "                     )).dropna(subset = [\"commit_id\"]).withColumn(\n",
-    "    \"is_main\",\n",
+    "    \"is_main\",                                                      \n",
     "    when(col(\"branch_ref\").endswith(\"main\"), True)\n",
     "    .when(col(\"branch_ref\").endswith(\"master\"), True)\n",
     "    .otherwise(False)\n",
@@ -627,7 +628,7 @@
    "source": [
     "# Commit Table\n",
     "\n",
-    "- Make sure no nulls/duplicates and correct casting"
+    "- Optimize Language Detection on Future Sprint"
    ]
   },
   {
@@ -647,11 +648,12 @@
    },
    "outputs": [],
    "source": [
-    "commit_df = (df.filter(col(\"type\") == \"PushEvent\").select(\n",
-    "    col(\"payload.commits\")[0].sha.alias(\"commit_id\"),\n",
-    "    col(\"payload.commits\")[0].message.alias(\"commit_message\"),\n",
-    "    col(\"payload.commits\")[0].distinct.alias(\"distinct\")\n",
-    "    )).dropna(subset = [\"commit_id\"])\n"
+    "commit_df1 = (df.filter(col(\"type\") == \"PushEvent\").select(\n",
+    "    col(\"payload.push_id\").alias(\"commit_id\"),\n",
+    "    col(\"payload.commits\")[0].message.alias(\"commit_message\")\n",
+    "    ).dropna(subset = [\"commit_message\"])\n",
+    "    .filter(col(\"commit_message\").rlike('[a-zA-Z0-9]'))\n",
+    "    )\n"
    ]
   },
   {
@@ -675,12 +677,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ld_wiki_tatoeba_cnn_43 download started this may take some time.\nApproximate size to download 7.5 MB\n\r[ | ]\r[OK!]\n"
+      "ld_wiki_tatoeba_cnn_43 download started this may take some time.\nApproximate size to download 7.5 MB\n\r[ | ]\r[ / ]\r[ — ]\r[ \\ ]\r[ | ]\r[ / ]\r[ — ]\r[ \\ ]\r[ | ]\r[ / ]\r[ — ]\r[ \\ ]\r[OK!]\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "# Step 1: Transforms raw texts to `document` annotation\n",
     "document_assembler = (\n",
     "    DocumentAssembler()\n",
@@ -692,10 +693,32 @@
     "    LanguageDetectorDL.pretrained(\"ld_wiki_tatoeba_cnn_43\")\n",
     "    .setInputCols(\"document\")\n",
     "    .setOutputCol(\"lang\")\n",
-    "    .setThreshold(0.6)\n",
-    "    .setCoalesceSentences(True) \n",
+    "    .setThreshold(0.6) \n",
     ")\n",
-    "nlpPipeline = Pipeline(stages=[document_assembler, languageDetector])\n"
+    "\n",
+    "finisher = Finisher().setInputCols([\"lang\"]).setIncludeMetadata(False)\n",
+    "\n",
+    "nlpPipeline = Pipeline(stages=[document_assembler, languageDetector, finisher])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "dec299c7-a59d-474e-8df4-bea94cdaacc1",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "result = nlpPipeline.fit(commit_df1).transform(commit_df1)"
    ]
   },
   {
@@ -715,39 +738,10 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "result = nlpPipeline.fit(commit_df).transform(commit_df)\n",
-    "\n",
     "commit_df = result.select(\n",
     "    \"commit_id\",\n",
-    "    \"distinct\",\n",
-    "    col(\"lang.result\")[0].alias(\"lang\")\n",
-    "    ).dropna(subset=[\"lang\"])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "06475943-1ee0-4a39-b4f0-ae3f7d03f0c0",
-     "showTitle": false,
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "schema = StructType([\n",
-    "   StructField('commit_id', StringType(), nullable = False),\n",
-    "   StructField('distinct', BooleanType(),nullable = False),\n",
-    "   StructField('lang', StringType(),),\n",
-    "])\n",
-    "commit_df = spark.createDataFrame(commit_df.rdd, schema = schema)"
+    "    col(\"finished_lang\")[0].alias(\"language\")\n",
+    "    )"
    ]
   },
   {
@@ -765,20 +759,67 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/html": [
+       "<style scoped>\n",
+       "  .ansiout {\n",
+       "    display: block;\n",
+       "    unicode-bidi: embed;\n",
+       "    white-space: pre-wrap;\n",
+       "    word-wrap: break-word;\n",
+       "    word-break: break-all;\n",
+       "    font-family: \"Menlo\", \"Monaco\", \"Consolas\", \"Ubuntu Mono\", \"Source Code Pro\", monospace;\n",
+       "    font-size: 13px;\n",
+       "    color: #555;\n",
+       "    margin-left: 4px;\n",
+       "    line-height: 19px;\n",
+       "  }\n",
+       "</style>"
+      ]
+     },
+     "metadata": {
+      "application/vnd.databricks.v1+output": {
+       "arguments": {},
+       "data": "",
+       "errorSummary": "Cancelled",
+       "errorTraceType": "html",
+       "metadata": {},
+       "type": "ipynbError"
+      }
+     },
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#Commit Table to Storage\n",
     "\n",
     "(commit_df\n",
-    " .coalesce(8)\n",
+    " .repartition(16)\n",
     " .write\n",
-    " #.partitionBy(\"lang\")\n",
     " .format(\"parquet\")\n",
     " .option(\"header\", True)\n",
     " .mode(\"overwrite\")       \n",
     " .save(silver_path + \"CommitTable\")\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d40e3258-c405-4fdc-bb5d-f511009f49b0",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -786,12 +827,6 @@
    "dashboards": [],
    "language": "python",
    "notebookMetadata": {
-    "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 2818710761087226,
-     "dataframes": [
-      "_sqldf"
-     ]
-    },
     "pythonIndentUnit": 4
    },
    "notebookName": "Team 4 Silver Medallion Notebook",
